2019-03-27 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added further code documentation.
	Fixed some dates.
	
	*CHANGELOG: Documented recent changes.

	*.gitignore: Added .gitignore

2018-12-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added functions to handle terminal args.

	*README.md: Rewrote sections on use and bug tracking.
	
	*CHANGELOG: Documented recent changes.
	
2018-12-11 James Phillips <james@jamesphillipsuk.com>
	*main.c: Begin total rewrite of the code.

	*main.c.old: Moved legacy code to main.c.old for documentation and reference.
	
	*CHANGELOG: Documented recent changes.

2017-03-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Altered typo in initial comment block and drawintroproc (The Project started in April, not March).
	Added errno.h for enhanced error handling, and updated file opening to match.
	Added the same functionality for the back arrow as the up.
	Re-altered the up-arrow press.
	
	*CHANGELOG: Documented recent changes.

2016-10-03 James Phillips <james@jamesphillipsuk.com>
	*main.c: Renamed program - from MyProg to Aviate.
	Changed program name in copyproc, drawintroproc, and drawmainproc.
	Changed version number to Public Alpha 2.2.
	Completely rewrote up arrow case again, it's all about figuring out more efficient ways to do things.
	
	*makefile: Added Aviate as a target.
	
	*CHANGELOG: Documented recent changes.
	
2016-10-02 James Phillips <james@jamesphillipsuk.com>
	*main.c: fixed Buffer writing rubbish to file after up arrow is pressed.
	Added even more comments.
	
	*CHANGELOG: Documented recent changes.

2016-10-01 James Phillips <james@jamesphillipsuk.com>
	*main.c: fixed issue with void main (void) procedure, is now int main (void), with a return of 0.
	In testupproc, loop iterating through the buffer is running for Cnt < 2049, rather than sizeof() the pointer.
	Added CLEARLN() Macro
	Rewrote the up arrow press response, still not functioning correctly.
	
	*CHANGELOG: Documented recent changes.
